GAIM: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.10.0: 
	* New Smiley Faces and Pixmaps added.
	* Smiley faces now properly wrap in the conversation windows.
	* Smiley dialog
	* Fixed 0-byte file segfault.
	* Borderless buttons (for that cool pop-up look)
	* Fixed some resizing bugs
	* Added Ctrl+{B/I/U/S} hotkeys to conversation windows.
	* Support for %n, %d, and %t in away messages.  Thanks bmiller!
	* Background colors
	* Redesigned preferences dialog
	* Redesigned conversation dialog
	* Removed the Lag-O-Meter
	* Socks 4/5 Proxy works
	* Buddy Pounces are now saved in .gaimrc
	* Buddy Chats are now saved in .gaimrc
	* Ability to merge gaim, aim2, aim4 buddylists. Thanks again bmiller!
	* ICQ-style aliases. This lets you change the name you see your buddy
	  as. For example, if your buddy's SN is 'CouldntGetMyName', you can
	  alias him as 'Loser'.
	* Compile with GNOME bits if available
	* Added GNOME Url Handler as an available web-browser 
	* Added the S html tag. 		
	* Optionally Ignore TiK's Automated Messages
	* Option to beep instead of play sound
	* New icons for panel (depends on some GNOME pixmaps)
	* Perl scripting. See plugins/PERL-HOWTO for how to write perl scripts.
	  All .pl files in ~/.gaim are autoloaded when gaim starts.

version 0.9.20 (07/14/2000):
	* More plugin events, more plugin features
	* French (fr), Spanish (es), Simplified Chinese (zh_CN), Korean (kr)
	  translations added 
	* Run-time OSCAR support
	* Added buddy list ticker (See prefs/Appearance). Clicking on a
	  name will cause a new or previous IM window to display for 
	  that screenname 
	* "You are sending messages too quickly" error is now fixed
	   when you have a large buddylist.
	* Fixed the LC_ALL compile problem on Solaris boxes 
	* Fixed PPC and ARM compile problem with oscar.c
	* Smileys work better, and don't cause font attributes to drop
	* Dialog windows are now prettier
	* /me in IM window; font/color dialogs and smileys in chat window
